# handy-dict

./: .bumpversion.cfg  00_core.ipynb  01_exceptions.ipynb  01_handy_dict.ipynb  02_apply_keyed.ipynb  03_apply_keyed.ipynb  03_return_keyed.ipynb  04_handy_dict.ipynb  05_multi_get.ipynb  Makefile  README.md  index.ipynb  pyproject.toml  settings.ini
.github/workflows/: main.yml
docs/: _config.yml  apply_keyed.html  core.html  exceptions.html  handy_dict.html  index.html  multi_get.html  return_keyed.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
handy_dict/: __init__.py  _nbdev.py  apply_keyed.py  core.py  exceptions.py  return_keyed.py
